package rbadenas.mastermind.models;

public class ProposedCombination extends Combination {

    public ProposedCombination(String combinationString){
        super(combinationString);
    }

}
